--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,7 +1,13 @@
+# define cucumber profiles
+#
+# Example usage:
+#
+#     bundle exec cucumber --profile wip
+---
 <%
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
-rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
-std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags ~@wip"
+rerun_opts = rerun.to_s.strip.empty? ? "--format pretty" : "--format pretty #{rerun}"
+std_opts = "--format pretty --tags ~@wip"
 %>
 default: <%= std_opts %> -r features
 wip: --tags @wip:3 --wip -r features
