--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,14 +1,28 @@
+<%
+  require 'rbconfig'
+  WINDOWS = RbConfig::CONFIG['host_os'] =~ /msdos|mswin|win32|mingw/i unless defined?(WINDOWS)
+
+  opts =  []
+  opts << ["--color"]
+  opts << ["--format pretty"]
+  opts << ["--strict"]
+  opts << ["-r features"]
+  opts << ["--no-profile"]
+  opts << ["--tags ~@wip"]
+  opts << ["--tags ~@windows"] unless WINDOWS
+  opts << ["--tags ~@posix"] if WINDOWS
+
+  std_opts = opts.join(' ')
+  rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
+  rerun_opts = rerun.to_s.strip.empty? ? "--format pretty" : "--format pretty #{rerun}"
+
+%>
 # define cucumber profiles
 #
 # Example usage:
 #
 #     bundle exec cucumber --profile wip
 ---
-<%
-rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
-rerun_opts = rerun.to_s.strip.empty? ? "--format pretty" : "--format pretty #{rerun}"
-std_opts = "--format pretty --tags ~@wip"
-%>
 default: <%= std_opts %> -r features
 wip: --tags @wip:3 --wip -r features
 rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip -r features
