--- a/examples/config/repo.conf
+++ b/examples/config/repo.conf
@@ -11,7 +11,7 @@ options:
 folders:
 
   # main repo configuration files
-  assets  : /home/robert/workspace/repoman/examples/config/assets
+  assets  : assets
 
   #
   # repo user tasks, file extentions can be '.rb' or '.thor'
@@ -26,7 +26,7 @@ folders:
   #
   #         c:/dat/condenser/tasks
   #
-  tasks        : /home/robert/workspace/repoman/examples/config/tasks
+  tasks        : tasks
 
 logging:
   loggers:
@@ -46,7 +46,7 @@ logging:
       name          : logfile
       level         : debug
       truncate      : true
-      filename      : '/home/robert/workspace/repoman/examples/config/repo.log'
+      filename      : 'repo.log'
       layout:
         type        : Pattern
         pattern     : '[%d] %l %c : %m\n'
