--- a/example/config/repo.conf
+++ b/example/config/repo.conf
@@ -44,7 +44,7 @@ logging:
         color_scheme: default
     - type          : File
       name          : logfile
-      level         : debug
+      level         : info
       truncate      : true
       filename      : 'repo.log'
       layout:
