add whitelist commands to generate init task

--- a/examples/pc_saved_game_backup/repoman/repo.conf
+++ b/examples/pc_saved_game_backup/repoman/repo.conf
@@ -28,6 +28,18 @@ folders:
   #
   tasks        : tasks
 
+# git commands must be whitelisted
+commands:
+- diff
+- grep
+- log
+- ls-files
+- show
+- status
+- push
+- add
+- commit
+
 logging:
   loggers:
     - name          : root
